tests/snapshots/examples_fixtures/type_system__26_any_boundary_success.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/26_any_boundary_success.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Any with Int.

  --> examples/type_system/26_any_boundary_success.flx:8:26
  |
8 |     let value = identity(42)
  |                          ^^
  |                          -- expected Any, found Int
  |                          -- argument type is known at compile time

Help:
  argument #1 does not match function contract
  Unknown type `Any` — did you mean `Int`?
== stdout ==
<not executed>
